fix: image not showing on home screen

--- a/src/index.css
+++ b/src/index.css
@@ -46,13 +46,12 @@ body {
 }
 
 .home-screen {
-  width: 100%;
-  height: 100vh;
-  position: relative;
   display: grid;
   place-content: center;
   place-items: center;
   position: relative;
+  width: 100%;
+  height: 100vh;
 
   &::after {
     z-index: -1;
@@ -61,7 +60,7 @@ body {
         rgba(0, 0, 0, 0.8) 20%,
         rgba(0, 0, 0, 0.6) 40%
       ),
-      url("./spiral.jpg");
+      url("./assets/spiral.jpg");
     background-position: center;
     background-size: cover;
     background-blend-mode: darken;
